--- a/src/Login.css
+++ b/src/Login.css
@@ -3,7 +3,6 @@
 }
 
 .class_login{
-    display: flex;
     flex-direction: column;
     align-items: center;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -15,6 +14,18 @@
     background-image: url('https://cdn.pixabay.com/photo/2017/03/30/13/56/turquoise-2188530_960_720.jpg');
     margin: 0;
     
+}
+
+.flex_continer{
+    display: flex;
+}
+
+.form_login{
+    flex: 1;
+}
+
+.Logged_in_users{
+    flex: 1;
 }
 
 .Header{
