--- a/src/App.css
+++ b/src/App.css
@@ -68,12 +68,12 @@
   margin-right: 20px;
 }
 
-.Header{
+/* .Header{
   color:rgb(24, 91, 93);
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 60px;
   font-weight:bolder;
-}
+} */
 
 .player-list{
   margin-left: 10%;
