--- a/src/Login.css
+++ b/src/Login.css
@@ -3,19 +3,45 @@
 }
 
 .class_login{
+    display: flex;
     flex-direction: column;
     align-items: center;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     font-size:1cm;
-    color:rgb(52, 92, 92);
+    color: rgb(6, 7, 7);
     width: 100%;
     height: 170px;
-    background-image: url('https://cdn.pixabay.com/photo/2017/03/30/13/56/turquoise-2188530_960_720.jpg');
+    background-color: rgb(235, 247, 144);
     margin: 0;
-    
-}
+    position: relative;
+ }
 
+  .Header{
+    color:rgb(5, 7, 7);
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+
+  .kubiyaR{
+    position: absolute;
+    top: 30px;
+    right: 40px;
+    width: 4cm;
+    transform: rotate(15deg);
+    box-shadow: 10px 10px 50px #ccc;
+    border-radius: 20%;
+  }
+  
+  .kubiyaL{
+    position: absolute;
+    top: 30px;
+    left: 50px;
+    width: 4cm;
+    transform: rotate(345deg);
+    box-shadow: 10px 10px 50px #ccc;
+    border-radius: 20%;
+  }
+  
 .flex_continer{
     display: flex;
 }
@@ -28,10 +54,6 @@
     flex: 1;
 }
 
-.Header{
-    color:rgb(24, 91, 93);
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  }
 
 .class_username{
     margin-right: 10px;
