--- a/src/SignUp.css
+++ b/src/SignUp.css
@@ -6,24 +6,47 @@
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     font-size:1cm;
-    color:rgb(52, 92, 92);
+    color: rgb(6, 7, 7);
     width: 100%;
     height: 170px;
-    background-image: url('https://cdn.pixabay.com/photo/2017/03/30/13/56/turquoise-2188530_960_720.jpg');
+    background-color: rgb(235, 247, 144);
     margin: 0;
-}
+    position: relative;
+  }
 
 .Header{
-    color:rgb(24, 91, 93);
+    color:#010101;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+.kubiyaR{
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  width: 4cm;
+  transform: rotate(15deg);
+  box-shadow: 10px 10px 50px #ccc;
+  border-radius: 20%;
+}
+
+.kubiyaL{
+  position: absolute;
+  top: 30px;
+  left: 50px;
+  width: 4cm;
+  transform: rotate(345deg);
+  box-shadow: 10px 10px 50px #ccc;
+  border-radius: 20%;
+}
+
 .username{
-    margin-right: 10px;
+    font-size: small;
     margin-bottom: 10px;
     padding: 10px;
     border-radius: 5px;
-    bottom: 70px;
+    margin-right: auto;
+    margin-left: auto;
+    text-decoration: none;
 }
 
 
@@ -50,7 +73,7 @@
     text-align: center;
     line-height: 10px;
     font-size: 50px;
-    color: rgb(52, 92, 92);
+    color: rgb(6, 7, 7);
   }
   
   .button{
@@ -59,7 +82,7 @@
     padding: 10px 80px;
     border: none;
     opacity: 0.8;
-    border: 1px #b7e6e6 solid;
+    border: 1px #eceee0 solid;
     text-align: center;
   }
   
