--- a/src/GetTo100.css
+++ b/src/GetTo100.css
@@ -98,7 +98,10 @@
     text-align: center;
     flex: 1;
     margin-left: 0px;
-    margin-top: 40px;
+    margin-top: 35px;
+    font-weight: bold;
+    font-size: 1.5cm ;
+    
 
 }
 
@@ -131,16 +134,16 @@
 .game .actions{
     margin-right: 38%;
     margin-left: 40%;
-    margin-bottom: 20%;
     size: 100px;
+    margin-bottom: 10%;
 
 }
 
-.actions{
-    margin-right: 38%;
-    margin-left: 40%;
-    margin-bottom: 20%;
-    size: 50px;
+.steps{
+    margin-top: 5%;
+    font-weight: bold;
+    font-size: 0.8cm ;
+    text-align: center;
 }
 
 ul {
