--- a/src/SignUp.css
+++ b/src/SignUp.css
@@ -49,26 +49,38 @@
     text-decoration: none;
 }
 
+.flex{
+  margin-top: 20%;
+  margin-bottom: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-right: auto;
+  margin-left: auto;
+}
 
 .class_username{
     text-align: center;
+    flex: 1;
   }
   
   .class_password{
     text-align: center;
+    flex: 1;
   }
   
   .class_confirmPassword{
     text-align: center;
+    flex: 1;
   }
   
   .submit{
     text-align: center;
+    margin-bottom: 15px;
   }
   
   .SignUp{
     width: 50%;
-    margin: 50px auto;
     height: auto;
     text-align: center;
     line-height: 10px;
@@ -86,3 +98,31 @@
     text-align: center;
   }
   
+  .div_form {
+    width: 400px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 30%;
+ }
+
+
+
+form li {
+    list-style: none;
+    padding-bottom: 20px;
+    display: flex;
+}
+
+form li label {
+    padding-right: 10px;
+}
+
+form li input,
+textarea {
+    flex: 1;
+}
+
+.list{
+bottom: 100px;
+}
+
